2008-02-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) import with page object.

2008-02-03  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) URI fragment.

2007-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) NOT operator
	notation for cond.

	* Source Code Management: cvs -> svn.

2007-09-06  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/rs.rb: (Gluon::RequestResponseContext class) switch to
	another page.

2007-09-05  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: abort on action-call by reserved word.

2007-09-02  TOKI Yoshinori  <toki@freedom.ne.jp>

	* run/server/mongrel: mongrel.

2007-07-31  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: (Gluon::Action class) strict call check for
	action method.

2007-06-30  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/dispatcher.rb: (Gluon::Dispatcher class) change
	location path of root.

2007-06-23  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) path_info
	option of mklink method.

2007-06-21  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) import adds
	name to prefix.

2007-06-20  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) view_name
	method -> __view__ method.

2007-06-19  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) naivete
	implementation of form control methods. text, password, submit and
	hidden.
	

2007-06-17  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: (Gluon::PresentationObject class) not_cond ->
	cond_not.

	* lib/gluon/action.rb: (Gluon::Action class) set plugin in apply
	method.

	* lib/gluon/builder.rb: (Gluon::Builder class) initial block and
	final block at config.rb

	* lib/gluon/po.rb: (Gluon::PresentationObject class) action.
