@@ -3,7 +3,7 @@
 <p>
   condition is
   <% cond :true_test do %>true.<% end %>
-  <% cond NOT(:true_test) do %>false.<% end %>
+  <% cond neg(:true_test) do %>false.<% end %>
 </p>
 
 <h2>2. false condition</h2>
@@ -11,13 +11,19 @@
 <p>
   condition is
   <% cond :false_test do %>true.<% end %>
-  <% cond NOT(:false_test) do %>false.<% end %>
+  <% cond neg(:false_test) do %>false.<% end %>
 </p>
-
-<h3>3. optional false condition</h3>
 
 <p>
   condition is
   <% cond :false_test do %>true.<% end %>
-  <% cond :false_test, :not => true do %>false.<% end %>
+  <% cond NOT(:false_test) do %>false. (alias)<% end %>
+</p>
+
+<h2>3. optional false condition</h2>
+
+<p>
+  condition is
+  <% cond :false_test do %>true.<% end %>
+  <% cond :false_test, :negate => true do %>false.<% end %>
 </p>
