@@ -112,19 +112,19 @@ module Gluon::Test
                    render_page('<% cond :bar do %>HALO<% end %>'))
 
       assert_equal('',
-                   render_page('<% cond :foo, :not => true do %>HALO<% end %>'))
+                   render_page('<% cond :foo, :negate => true do %>HALO<% end %>'))
       assert_equal('HALO',
-                   render_page('<% cond :bar, :not => true do %>HALO<% end %>'))
+                   render_page('<% cond :bar, :negate => true do %>HALO<% end %>'))
+
+      assert_equal('',
+                   render_page('<% cond neg(:foo) do %>HALO<% end %>'))
+      assert_equal('HALO',
+                   render_page('<% cond neg(:bar) do %>HALO<% end %>'))
 
       assert_equal('',
                    render_page('<% cond NOT(:foo) do %>HALO<% end %>'))
       assert_equal('HALO',
                    render_page('<% cond NOT(:bar) do %>HALO<% end %>'))
-
-      assert_equal('',
-                   render_page('<% cond_not :foo do %>HALO<% end %>'))
-      assert_equal('HALO',
-                   render_page('<% cond_not :bar do %>HALO<% end %>'))
     end
 
     class PageForForeach
